<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/title_default_settings">

        <Preference
            android:key="@string/key_restore_folder"
            android:summary="@string/summary_restore_folder"
            android:title="@string/title_restore_folder" >
            <intent android:action="android.intent.action.OPEN_DOCUMENT_TREE"/>
        </Preference>

        <Preference
            android:key="@string/key_backup_folder"
            android:summary="@string/summary_backup_folder"
            android:title="@string/title_backup_folder" >
            <intent android:action="android.intent.action.OPEN_DOCUMENT_TREE"/>
        </Preference>


</PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_nfc_settings">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/key_fast_write"
            android:summary="@string/summary_fast_write"
            android:title="@string/chckbx_fast_write" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/title_misc_settings">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/key_dark_mode"
            android:summary="@string/summary_dark_mode"
            android:title="@string/chckbx_dark_mode" />

    </PreferenceCategory>

</PreferenceScreen>