<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
>

    <ImageView
        android:id="@+id/n2logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="56dip"
        android:src="@drawable/n2logo" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/n2logo" />

    <TextView
        android:id="@+id/scan_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_tag_message"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/welcome" />

    <TextView
        android:id="@+id/enable_nfc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openNFCSettings"
        android:text="@string/enable_nfc_message"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="invisible"
        android:textColor="@color/red_500"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/scan_tag" />

    <Button
        android:id="@+id/button_setting"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/version_footer"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dip"
        android:onClick="btnSettingClick"
        android:text="@string/btn_settings"
        android:visibility="visible" />

    <TextView
        android:id="@+id/version_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dip"
        android:layout_alignParentBottom="true"
        android:text="@string/version"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/gray_200"
        android:layout_centerHorizontal="true" />

</RelativeLayout>